// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postcss-at2x should add device-pixel-ratio rules 1`] = `
"/**
 * Multiple background values being set at once
 */
.logo {
  background: red url('/public/images/logo.png') no-repeat 0 0;
  background-size: auto auto;
}

/**
 * Just an image
 */
.user {
  background-image: url('/public/images/site.png');
}

/**
 * Keyword doesn't have to go at the end
 */
.user {
  background: transparent url('/public/images/site.png') repeat 0 0;
}

/**
 * Ignoring declarations without at-2x
 */
.avatar {
  background-image: url('/public/images/site.png');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .logo {
    background-image: url('/public/images/logo@2x.png');
  }
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .user {
    background-image: url('/public/images/site@2x.png');
  }
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .user {
    background-image: url('/public/images/site@2x.png');
  }
}
"
`;

exports[`postcss-at2x should add device-pixel-ratio rules 2`] = `0`;

exports[`postcss-at2x should add rule for present retina images when configured to skip missing 1`] = `
".bear {
  background-image: url('./test/fixtures/images/bear.jpg');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .bear {
    background-image: url('./test/fixtures/images/bear@2x.jpg');
  }
}
"
`;

exports[`postcss-at2x should add rule for present retina images when configured to skip missing 2`] = `0`;

exports[`postcss-at2x should allow a custom identifier for retina file names 1`] = `
".user {
  background-image: url('/public/images/site.png');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .user {
    background-image: url('/public/images/site-retina.png');
  }
}
"
`;

exports[`postcss-at2x should allow a custom identifier for retina file names 2`] = `0`;

exports[`postcss-at2x should allow mulitple background images to be replaced 1`] = `
".multi {
  background: url(http://example.com/image.png),
              url(/public/images/cool.png),
              url(http://example.com/flowers-pattern.jpg);
}

.multi {
  background-image: url(http://example.com/image.png),
                    linear-gradient(to right, rgba(255, 255, 255, 0),  rgba(255, 255, 255, 1)),
                    url(/public/images/cool.png);
}

.multi {
  background: url(http://example.com/image.png), url(/public/images/cool.png), linear-gradient(to right, rgba(255, 255, 255, 0),  rgba(255, 255, 255, 1)), url(http://example.com/flowers-pattern.jpg);
}

@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {

  .multi {
    background-image: url(http://example.com/image.png), url(/public/images/cool@2x.png), url(http://example.com/flowers-pattern@2x.jpg);
  }
}

@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {

  .multi {
    background-image: url(http://example.com/image.png), linear-gradient(to right, rgba(255, 255, 255, 0),  rgba(255, 255, 255, 1)), url(/public/images/cool@2x.png);
  }
}

@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {

  .multi {
    background-image: url(http://example.com/image.png), url(/public/images/cool@2x.png), linear-gradient(to right, rgba(255, 255, 255, 0),  rgba(255, 255, 255, 1)), url(http://example.com/flowers-pattern@2x.jpg);
  }
}
"
`;

exports[`postcss-at2x should allow mulitple background images to be replaced 2`] = `0`;

exports[`postcss-at2x should allow retina image scoped to media query 1`] = `
".Logo {
  background-image: url(\\"../images/logo-1.png\\");
}

@media (min-width: 600px) {
  .Logo {
    background-image: url(\\"../images/logo-2.png\\");
  }
}

.Logo {
  background-image: url(\\"../images/logo-3.png\\");
}

@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {

  .Logo {
    background-image: url(\\"../images/logo-1@2x.png\\");
  }
}

@media (min-width: 600px) and (min-device-pixel-ratio: 1.5), (min-width: 600px) and (min-resolution: 144dpi), (min-width: 600px) and (min-resolution: 1.5dppx) {

  .Logo {
    background-image: url(\\"../images/logo-2@2x.png\\");
  }
}

@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {

  .Logo {
    background-image: url(\\"../images/logo-3@2x.png\\");
  }
}
"
`;

exports[`postcss-at2x should allow retina image scoped to media query 2`] = `0`;

exports[`postcss-at2x should have proper arguments for resolve image path function 1`] = `
Object {
  "end": Object {
    "column": 64,
    "line": 2,
  },
  "input": Input {
    "css": ".cat {
  background-image: url('./test/fixtures/images/cat.jpg') at-2x;
}
",
    "id": "<input css 8>",
  },
  "start": Object {
    "column": 3,
    "line": 2,
  },
}
`;

exports[`postcss-at2x should have proper arguments for resolve image path function 2`] = `
".cat {
  background-image: url('./test/fixtures/images/cat.jpg');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .cat {
    background-image: url('./test/fixtures/images/cat@2x.jpg');
    background-size: 200px 286px;
  }
}
"
`;

exports[`postcss-at2x should have proper arguments for resolve image path function 3`] = `0`;

exports[`postcss-at2x should not add background size when image cannot be found 1`] = `
".dog {
  background-image: url('./test/fixtures/images/dog.jpg');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .dog {
    background-image: url('./test/fixtures/images/dog@2x.jpg');
  }
}
"
`;

exports[`postcss-at2x should not add background size when image cannot be found 2`] = `1`;

exports[`postcss-at2x should not add rule for missing retina images when configured to skip missing 1`] = `
".cat {
  background-image: url('./test/fixtures/images/cat.jpg');
}
"
`;

exports[`postcss-at2x should not add rule for missing retina images when configured to skip missing 2`] = `0`;

exports[`postcss-at2x should process image and add background size 1`] = `
".cat {
  background-image: url('./test/fixtures/images/cat.jpg');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .cat {
    background-image: url('./test/fixtures/images/cat@2x.jpg');
    background-size: 200px 286px;
  }
}
"
`;

exports[`postcss-at2x should process image and add background size 2`] = `0`;

exports[`postcss-at2x should resolve image path with custom function 1`] = `
".cat {
  background-image: url('./test/fixtures/images/cat.jpg');
}
@media (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
  .cat {
    background-image: url('./test/fixtures/images/cat@2x.jpg');
    background-size: 200px 286px;
  }
}
"
`;

exports[`postcss-at2x should resolve image path with custom function 2`] = `0`;
